# arith

./: .gitignore  README.md  arith.opam  dune-project
lib/: arith.ml  ast.ml  ast.mli  dune  grammar.mly  lexer.mll  lib.ml  parser.ml  parser.mli  parser.mly  typed.ml  typed.mli
test/: dune  parser_driver.ml
test/programs/: arith.lambda  pairs.lambda  pairs_nested.lambda  simple.lambda  type_error.lambda
